# gotenberg-client

./: .codecov.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  versions.json
.docker/: docker-compose.ci-test-edge.yml  docker-compose.ci-test.yml
.github/: FUNDING.yml  dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  codeql.yml
0.10.0/: 404.html  index.html  objects.inv  sitemap.xml
0.10.0/changelog/: index.html
0.10.0/contributing/: index.html
0.10.0/ref_clients/: index.html
0.10.0/ref_errors/: index.html
0.10.0/ref_modules/: index.html
0.10.0/ref_options/: index.html
0.10.0/ref_responses/: index.html
0.10.0/ref_routes/: index.html
0.10.0/roadmap/: index.html
0.10.0/routes/: index.html
0.10.0/search/: search_index.json
0.10.0/usage/: index.html
0.11.0/: 404.html  index.html  sitemap.xml
0.11.0/changelog/: index.html
0.11.0/contributing/: index.html
0.11.0/ref_clients/: index.html
0.11.0/ref_errors/: index.html
0.11.0/ref_modules/: index.html
0.11.0/ref_options/: index.html
0.11.0/ref_responses/: index.html
0.11.0/ref_routes/: index.html
0.11.0/roadmap/: index.html
0.11.0/routes/: index.html
0.11.0/search/: search_index.json
0.11.0/usage/: index.html
0.12.0/: 404.html  index.html  sitemap.xml
0.12.0/changelog/: index.html
0.12.0/contributing/: index.html
0.12.0/ref_clients/: index.html
0.12.0/ref_errors/: index.html
0.12.0/ref_modules/: index.html
0.12.0/ref_options/: index.html
0.12.0/ref_responses/: index.html
0.12.0/ref_routes/: index.html
0.12.0/roadmap/: index.html
0.12.0/routes/: index.html
0.12.0/search/: search_index.json
0.12.0/usage/: index.html
0.13.0/: 404.html  index.html  sitemap.xml
0.13.0/changelog/: index.html
0.13.0/contributing/: index.html
0.13.0/ref_clients/: index.html
0.13.0/ref_errors/: index.html
0.13.0/ref_modules/: index.html
0.13.0/ref_options/: index.html
0.13.0/ref_responses/: index.html
0.13.0/ref_routes/: index.html
0.13.0/roadmap/: index.html
0.13.0/routes/: index.html
0.13.0/search/: search_index.json
0.13.0/usage/: index.html
0.13.1/: 404.html  index.html  objects.inv  sitemap.xml
0.13.1/changelog/: index.html
0.13.1/contributing/: index.html
0.13.1/ref_clients/: index.html
0.13.1/ref_errors/: index.html
0.13.1/ref_modules/: index.html
0.13.1/ref_options/: index.html
0.13.1/ref_responses/: index.html
0.13.1/ref_routes/: index.html
0.13.1/roadmap/: index.html
0.13.1/routes/: index.html
0.13.1/search/: search_index.json
0.13.1/usage/: index.html
0.5.0/: 404.html  index.html  sitemap.xml
0.5.0/changelog/: index.html
0.5.0/roadmap/: index.html
0.5.0/usage/: index.html
0.6.0/: 404.html  index.html  sitemap.xml
0.6.0/changelog/: index.html
0.6.0/roadmap/: index.html
0.6.0/routes/: index.html
0.6.0/search/: search_index.json
0.6.0/usage/: index.html
0.7.0/: 404.html  index.html  sitemap.xml
0.7.0/changelog/: index.html
0.7.0/roadmap/: index.html
0.7.0/routes/: index.html
0.7.0/search/: search_index.json
0.7.0/usage/: index.html
0.8.0/: 404.html  index.html  sitemap.xml
0.8.0/changelog/: index.html
0.8.0/roadmap/: index.html
0.8.0/routes/: index.html
0.8.0/search/: search_index.json
0.8.0/usage/: index.html
0.8.1/: 404.html  index.html  sitemap.xml
0.8.1/changelog/: index.html
0.8.1/roadmap/: index.html
0.8.1/routes/: index.html
0.8.1/search/: search_index.json
0.8.1/usage/: index.html
0.8.2/: 404.html  index.html  sitemap.xml
0.8.2/changelog/: index.html
0.8.2/roadmap/: index.html
0.8.2/routes/: index.html
0.8.2/search/: search_index.json
0.8.2/usage/: index.html
0.9.0/: 404.html  index.html  sitemap.xml
0.9.0/changelog/: index.html
0.9.0/contributing/: index.html
0.9.0/roadmap/: index.html
0.9.0/routes/: index.html
0.9.0/search/: search_index.json
0.9.0/usage/: index.html
docs/: changelog.md  contributing.md  index.md  ref_clients.md  ref_errors.md  ref_modules.md  ref_options.md  ref_responses.md  ref_routes.md  reference.md  roadmap.md  routes.md  usage.md
latest/: 404.html  index.html  sitemap.xml
latest/changelog/: index.html
latest/roadmap/: index.html
latest/search/: search_index.json
latest/usage/: index.html
src/gotenberg_client/: __about__.py  __init__.py  _base.py  _client.py  _errors.py  _health.py  _merge.py  _types.py  _types_compat.py  _typing_compat.py  _utils.py  constants.py  options.py  responses.py
src/gotenberg_client/_base/: __init__.py  api.py  routes.py
src/gotenberg_client/_chromium/: __init__.py  api.py  mixins.py  options.py  routes.py
src/gotenberg_client/_common/: __init__.py  mixins.py  protocols.py  units.py
src/gotenberg_client/_convert/: __init__.py  chromium.py  common.py  libre_office.py  pdfa.py
src/gotenberg_client/_libreoffice/: __init__.py  api.py  mixins.py  routes.py
src/gotenberg_client/_merge/: __init__.py  api.py  routes.py
src/gotenberg_client/_others/: __init__.py  api.py  routes.py
src/gotenberg_client/_pdfa_ua/: __init__.py  api.py  routes.py
src/gotenberg_client/_pdfmetadata/: __init__.py  api.py  options.py  routes.py
src/gotenberg_client/client/: __init__.py  base.py
tests/: __init__.py  conftest.py  test_convert_chromium_html.py  test_convert_chromium_markdown.py  test_convert_chromium_screenshots.py  test_convert_chromium_url.py  test_convert_libre_office.py  test_convert_pdf_a.py  test_flatten.py  test_health.py  test_merge.py  test_metadata.py  test_misc_stuff.py  test_split.py  utils.py
tests/docker/: docker-compose.ci-test-edge.yml  docker-compose.ci-test.yml
tests/samples/: basic.html  complex.html  footer.html  header.html  markdown1.md  markdown2.md  markdown_index.html  sample-password.odt  sample-with-images.odt  sample.docx  sample.ods  sample.odt  sample.xlsx  style.css
